--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.14.1",
-    "daisyui": "^5.1.25",
-    "tailwindcss": "^4.1.13"
+    "astro": "^5.14.1"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
